syntax = "proto3";

package pb;

option go_package = "bitmoi/backend/gapi/pb";

import "validate/validate.proto";

message AnotherIntervalRequest{
    string req_interval = 1 [(validate.rules).string = {in: ["5m","15m","1h","4h","1d"]}];
    string identifier = 2 [(validate.rules).string.min_bytes = 1];
    string mode = 3 [(validate.rules).string = {in: ["practice","competition"]}];
    int32 stage = 4 [(validate.rules).int32 = {gt: 0, lte: 10}];
	string user_id = 5;
}